--- a/main/templates/portfolio_edit.html
+++ b/main/templates/portfolio_edit.html
@@ -102,7 +102,7 @@
                     
                         <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 relative p-0">                                            
                             <div class="card shadow-sm x-shadow-fade-in">
-                                <img {%if user.medcard_url%} src="{%static user.medcard_url%}" {%endif%} alt="">
+                                <img {%if user.medcard_url%} src="{{user.medcard_url}}" {%endif%} alt="">
                             </div>                                                                                        
                         </div>
                     </div>
