--- a/main/templates/portfolio_achivements.html
+++ b/main/templates/portfolio_achivements.html
@@ -21,7 +21,7 @@
                                     <img src="{{block.img_url}}" class="achivement-img"
                                         alt="">
                                     <div class="achivement-div">
-                                        <h3 class="achive-title">{{block.title}}</h3>
+                                        <h3 class="achive-title">Описание</h3>
                                         <span class="achive-description">{{block.description}}</span>
                                     </div>
                                     {% if request.session.role == "student"%}
