--- a/main/templates/portfolio_achivements.html
+++ b/main/templates/portfolio_achivements.html
@@ -26,8 +26,8 @@
                                     </div>
                                     {% if request.session.role == "student"%}
                                         <form class="form" action="{%url 'main:delete_achivement'%}" method="post" id="registrationForm"> {% csrf_token %}
-                                            <input type="hidden" name="id" value="{{block.id}}" disabled>
-                                            <button type="submit" href="###" class="cancel-img relative">
+                                            <input type="hidden" name="id" value="{{block.id}}" >
+                                            <button type="submit" class="cancel-img relative">
                                                 <img src="{%static 'images/icons/close.png'%}" alt="" class="cancel-img">
                                             </button>
                                         </form>
