--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -233,5 +233,8 @@
                 $("#sendRequestBtn").prop('value', 'Отправлено!');
             }});
         });
+        var cw = $('.achivement-img').width();
+        $('.achivement-img').css({'height':cw+'px'});
     </script>
+    
 {% endblock %}
