--- a/main/templates/portfolio_show.html
+++ b/main/templates/portfolio_show.html
@@ -103,7 +103,7 @@
                             <div class="card shadow-sm x-shadow-fade-in">
                                 {% if student.medcard_url%}
                                     <div class="preview">
-                                        <img alt="" src="{%static student.medcard_url%}" class="achivement-img">
+                                        <img alt="" src="{{student.medcard_url}}" class="achivement-img">
                                         <div class="myoverlay">
                                         </div>
                                         <div class="links" style="text-align: center;">
