--- a/main/templates/portfolio_achivements.html
+++ b/main/templates/portfolio_achivements.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <!--/tab-content-->
-    {% if blocks%}
+    {% if blocks and pages|length > 1%}
       <div class="navigation">
           <ul>
               {% for page in pages%}
