--- a/main/templates/base_vacancy.html
+++ b/main/templates/base_vacancy.html
@@ -249,6 +249,7 @@
             $("#is_search")[0].click()
         }
 
-         
+        var cw = $('#avatar').width();
+        $('#avatar').css({'height':cw+'px'});
     </script>
 {% endblock %}
