--- a/main/templates/base_portfolio.html
+++ b/main/templates/base_portfolio.html
@@ -339,11 +339,11 @@
         if (btn) {
             btn.onclick = function () {
                 modal.style.display = "none";
-            };
+            }
         }
 
         $("#checkbox")[0].onchange = function(){
-            $("#is_search")[0].click()
+            $("#is_search")[0].click();
         }
 
         var cw = $('#avatar').width();
