--- a/main/templates/base_profile.html
+++ b/main/templates/base_profile.html
@@ -295,14 +295,14 @@
         if (btn) {
             btn.onclick = function () {
                 modal.style.display = "none";
-            };
+            }
         }
 
         $("#checkbox")[0].onchange = function(){
-            $("#is_search")[0].click()
+            $("#is_search")[0].click();
         }
 
-        var cw = $('#profileavatar').width();
-        $('#profileavatar').css({'height':cw+'px'});
+        cw = $('#profileavatar').width();
+        $('#profileavatar').css({'height':cw+'px !important'});
     </script>
 {% endblock %}
