--- a/main/templates/base_profile.html
+++ b/main/templates/base_profile.html
@@ -303,6 +303,6 @@
         }
 
         cw = $('#profileavatar').width();
-        $('#profileavatar').css({'height':cw+'px !important'});
+        $('#profileavatar').css({'height':cw+'px'});
     </script>
 {% endblock %}
