--- a/main/templates/employer_profile.html
+++ b/main/templates/employer_profile.html
@@ -54,8 +54,8 @@
                     
                     <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 relative p-0">                 
                         <div class="card shadow-sm x-shadow-fade-in">
-                            <h1 class="resume-title inherit-style">Описание</h1>                           
-                            <textarea placeholder="Информация о вакансии" name="resume"  id="resume" class="resume" rows="10">{{user.description}}</textarea>
+                            <h1 class="resume-title inherit-style">Информация</h1>                           
+                            <textarea placeholder="Информация о вас или вашей компании" name="resume"  id="resume" class="resume" rows="10">{{user.description}}</textarea>
                         </div>
                     </div>
                 </div>
