--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -20,7 +20,7 @@
           <div class="input-field first-wrap">
             <div class="input-select">
               <select data-trigger="" name="category" id="select">
-                <option placeholder="">Фильтр</option>
+                <option placeholder="" value="">Фильтр</option>
                 {% for key, value in category_values.items %}
                   <option {%if key == category%} selected {%endif%}value="{{key}}">{{value}}</option>
                 {% endfor%}
