--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -15,7 +15,7 @@
 
 {% block content %}
     <div class="s003">
-      <form action="###" method="get">
+      <form action="" method="get">
         <div class="inner-form">
           <div class="input-field first-wrap">
             <div class="input-select">
