--- a/main/templates/portfolio_edit.html
+++ b/main/templates/portfolio_edit.html
@@ -63,7 +63,7 @@
                         
                         <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 p-0">                                           
                             <div class="card shadow-sm x-shadow-fade-in">
-                                <input type="text" name="university" class="input100" required id="university" value="{%if user.university%} {{user.university}} {%endif%}" placeholder="Университет" title="Название университета">
+                                <input type="text" name="university" class="input100" required id="university" value="{{user.university}}" placeholder="Университет" title="Название университета">
                                 <span class="focus-input100"></span>
                             </div>                                            
                         </div>
