--- a/main/templates/base_portfolio.html
+++ b/main/templates/base_portfolio.html
@@ -170,7 +170,7 @@
                                 <div class="col-sm-3"><!--left col-->
                                     {% if request.session.role == "employer"%}
                                         <div class="text-center relative">
-                                            <img src="{{user.img_url}}" class="avatar img-circle img-thumbnail" id="avatar" style="width: 100%;border-radius: 50%;" alt="avatar">
+                                            <img src="{{student.img_url}}" class="avatar img-circle img-thumbnail" id="avatar" style="width: 100%;border-radius: 50%;" alt="avatar">
                                         </div>
                                     {% elif request.session.role == "student"%}
                                         <form action="{%url 'main:update_avatar'%}" style="text-align:center" enctype="multipart/form-data" method="post">{% csrf_token %}
