--- a/main/templates/base_profile.html
+++ b/main/templates/base_profile.html
@@ -205,8 +205,8 @@
                                 
                                     <ul class="list-group m-t-30 card shadow-sm x-shadow-fade-in">
                                         <li class="list-group-item text-muted inherit-style">Статистика<i class="fa fa-dashboard fa-1x m-l-5"></i></li>
-                                        <li class="list-group-item text-right"><span class="pull-left"><strong>Просмотры вакансий</strong></span> хз</li>
-                                        <li class="list-group-item text-right"><span class="pull-left"><strong>Заявки</strong></span>  хз</li>
+                                        <li class="list-group-item text-right"><span class="pull-left"><strong>Просмотры вакансий</strong></span> {{count_views}}</li>
+                                        <li class="list-group-item text-right"><span class="pull-left"><strong>Заявки</strong></span>{{requests|length}}</li>
                                     </ul> 
 
                                     
