--- a/main/templates/vacancy_show.html
+++ b/main/templates/vacancy_show.html
@@ -12,7 +12,7 @@
 {%block tab_content%}
 <div class="row">
 <div class="col-3">
-    <img src="{{vacancy.owner.img_url}}" class="achivement-img mgt-50" alt="">
+    <img src="{{vacancy.owner.img_url}}" id="avatar" class="achivement-img mgt-50" style="border-radius:50%;width:100%" alt="">
         <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 p-0 m-t-20" >                                           
             <div class="card shadow-sm x-shadow-fade-in">
                 <div type="text" class="input100 p-t-10" style="height:auto">
