--- a/main/templates/base_portfolio.html
+++ b/main/templates/base_portfolio.html
@@ -335,6 +335,9 @@
         var cw = $('#avatar').width();
         $('#avatar').css({'height':cw+'px'});
 
+        var cw = $('.achivement-img').width();
+        $('.achivement-img').css({'height':cw+'px'});
+
         $("#admin").addClass("active");
         var modal = document.getElementById("success-update");
         var btn = document.getElementById("close");
