--- a/main/templates/vacancy_show.html
+++ b/main/templates/vacancy_show.html
@@ -67,7 +67,7 @@
                         <div class="card shadow-sm x-shadow-fade-in">
                             <div type="text" class="input100 p-t-10">
                                 <span style="text-align: center; width: 100%">{{request.student.fullname}}</span>
-                                <a href="{%url 'main:portfolio_show' block.student.id%}" class="absolute-link"></a>
+                                <a href="{%url 'main:portfolio_show' request.student.id%}" class="absolute-link"></a>
                             </div>
                             <br>
                             <div class="row">
