--- a/main/templates/base_portfolio.html
+++ b/main/templates/base_portfolio.html
@@ -214,6 +214,9 @@
                                                                 <img src="{%static 'images/icons/telegram.png'%}" class="social" alt="">
                                                             </a>
                                                         {%endif%}
+                                                        {% if not student.vk and not student.telegram%}
+                                                            Студент не указал соц сети!
+                                                        {% endif %}
                                                     </li>                                                    
                                                 {% elif is_request_sended %}
                                                     <li class="list-group-item text-muted social-li style="height: auto;text-align: center;"">
