--- a/main/templates/base_portfolio.html
+++ b/main/templates/base_portfolio.html
@@ -219,7 +219,7 @@
                                                         {% endif %}
                                                     </li>                                                    
                                                 {% elif is_request_sended %}
-                                                    <li class="list-group-item text-muted social-li style="height: auto;text-align: center;"">
+                                                    <li class="list-group-item text-muted social-li" style="height: auto;text-align: center;">
                                                         <h4>Чтобы связатся со студентом нужно чтобы он принял вашу заявку!
                                                         </h4>
                                                     </li> 
