--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -70,7 +70,7 @@
                           </div>
                           <div class="inline-text m-t-10">
                             <h4 class="important-text">Достижения: </h4>
-                            <h4>{{block.achivements|length}}</h4>
+                            <h4>{{block.achivements.all|length}}</h4>
                           </div>
                           <div class="inline-text m-t-10">
                             <h4 class="important-text">Год рождения: </h4>
