--- a/main/templates/vacancy_show.html
+++ b/main/templates/vacancy_show.html
@@ -53,14 +53,23 @@
                 </div>
 
                 {% if request.session.role == "student"%}
-                <form class="form" action="{% url 'main:apply_vacancy' %}" method="post" >{% csrf_token %}
-                    <div class="form-group">          
-                        <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12 p-0">
-                            <input hidden type="text" value="{{vacancy.id}}" name="vacancy_id">                            
-                            <button id="sendRequestBtn" class="btn btn-lg btn-success col-12 m-b-20" type="submit">Откликнуться</button>    
-                        </div>                                                            
-                    </div>
-                </form>
+                    {% if not is_request_sended%}
+                    <form class="form" action="{% url 'main:apply_vacancy' %}" method="post" >{% csrf_token %}
+                        <div class="form-group">          
+                            <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12 p-0">
+                                <input hidden type="text" value="{{vacancy.id}}" name="vacancy_id">                            
+                                <button id="sendRequestBtn" class="btn btn-lg btn-success col-12 m-b-20" type="submit">Откликнуться</button>    
+                            </div>                                                            
+                        </div>
+                    </form>
+                    {% elif is_request_sended%}
+                         <div class="form-group">          
+                            <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12 p-0">
+                                <input hidden type="text" value="{{vacancy.id}}" name="vacancy_id">                            
+                                <button id="sendRequestBtn" class="btn btn-lg btn-success col-12 m-b-20" disabled>Вы уже откликнулись</button>    
+                            </div>                                                            
+                        </div>
+                    {%endif%}
                 {% elif request.session.role == "employer" %}
                 <h5 class="login100-form-title p-b-51">Откликнувшиеся студенты:</h5>
                     {% for request in requests %}
