--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -236,5 +236,8 @@
         var cw = $('.achivement-img').width();
         $('.achivement-img').css({'height':cw+'px'});
     </script>
-    
+    <script type="text/javascript">
+        var cw = $('.achivement-img').width();
+        $('.achivement-img').css({'height':cw+'px'});
+    </script>
 {% endblock %}
