--- a/main/templates/base_profile.html
+++ b/main/templates/base_profile.html
@@ -291,6 +291,9 @@
         cw = $('#profileavatar').width();
         $('#profileavatar').css({'height':cw+'px'});
 
+        var cw = $('.achivement-img').width();
+        $('.achivement-img').css({'height':cw+'px'});
+
         $("#admin").addClass("active");
         var modal = document.getElementById("success-update");
         var btn = document.getElementById("close");
