--- a/main/templates/base_vacancy.html
+++ b/main/templates/base_vacancy.html
@@ -237,7 +237,10 @@
     <script type="text/javascript">
         var cw = $('#avatar').width();
         $('#avatar').css({'height':cw+'px'});
-        
+
+        var cw = $('.achivement-img').width();
+        $('.achivement-img').css({'height':cw+'px'});
+
         $("#admin").addClass("active");
         var modal = document.getElementById("success-update");
         var btn = document.getElementById("close");
