--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -44,7 +44,7 @@
                             <ul class="sidebar-nav">
 
                             <li class="main-item ">
-                                <a routerlinkactive="active" href="{%url 'main:index'%}" >
+                                <a routerlinkactive="active" href="{%url 'main:index'%}" style="border:none;" >
                                 <span class="side-text {%block header_button1%} {% endblock %}">Главная</span>
                                 <div class="close-hover"> Главная </div>
                                 </a>
