--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -85,7 +85,7 @@
                             <div id="mobile-sidebar" class="open-sidebar">           
                             <ul class="sidebar-nav">
                                 <li class="main-item">
-                                    <a routerlinkactive="active" href="{%url 'main:index'%}" >
+                                    <a routerlinkactive="active" href="{%url 'main:index'%}" style="border:none;">
                                         <span class="side-text">Главная</span>
                                     </a>
                                 </li>
@@ -106,7 +106,7 @@
                         </div>
                             <ul class="sidebar-nav">
                             <li class="main-item">
-                                <a routerlinkactive="active" href="{%url 'main:index'%}" class="{%block header_button4%} {% endblock %}">
+                                <a routerlinkactive="active" href="{%url 'main:index'%}" class="{%block header_button4%} {% endblock %}" style="border:none">
                                 <span class="side-text">Главная</span>
                                 </a>
                             </li>
