--- a/main/templates/vacancy_show.html
+++ b/main/templates/vacancy_show.html
@@ -11,7 +11,7 @@
 
 {%block tab_content%}
 <div class="row">
-<div class="col-3">
+<div class="col-sm-3">
     <img src="{{vacancy.owner.img_url}}" id="avatar" class="achivement-img mgt-50" style="border-radius:50%;width:100%" alt="">
         <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 p-0 m-t-20" >                                           
             <div class="card shadow-sm x-shadow-fade-in">
@@ -38,7 +38,7 @@
             </div>                                            
         </div>
 </div>
-<div class="col-9">
+<div class="col-sm-9">
     <h1  class="important-text" style="margin:30px auto;text-align:left;">{{vacancy.title}}</h1>
     <h3  class="important-text" style="margin:30px auto;text-align:left; color:green">{{vacancy.salary}} тенге</h3>
     <div class="tab-content">
