--- a/main/templates/base_portfolio.html
+++ b/main/templates/base_portfolio.html
@@ -124,7 +124,7 @@
                                 </li>
                             {% endif %}
                             <li class="exit-item">
-                                <a routerlinkactive="active" href="#" class="">
+                                <a routerlinkactive="active" href="{%url 'main:logout'%}" class="">
                                 <span class="side-text">Выйти</span>
                                 </a>
                             </li>
