--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -24,7 +24,7 @@
 	
 	<div class="limiter">
 		<div class="container-login100">
-			<div class="wrap-login100" style="width:50%">
+			<div class="wrap-login100" >
 				<form class="login100-form validate-form flex-sb flex-w" style="justify-content:space-around" action="{%url 'main:register'%}" method="post" >{% csrf_token %}
                     <img src="{%static 'images/logo.png'%}" alt="" style="width: 150px;margin: auto;">
 					<span class="login100-form-title p-b-51">
