--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -26,7 +26,7 @@
 		<div class="container-login100">
 			<div class="wrap-login100 ">
 				<form class="login100-form validate-form flex-sb flex-w" method="post" action="{% url 'main:login'%}">{% csrf_token %}
-                    <img src="{%static 'images/logo.png'%}" alt="" style="width: 150px;margin: auto;">
+                    <img src="{%static 'images/logo.png'%}" alt="" style="width: 150px;margin-left:auto; margin-right:auto">
 					<span class="login100-form-title p-b-51">
 						Вход
 					</span>
