--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -26,7 +26,7 @@
 		<div class="container-login100">
 			<div class="wrap-login100 adaptive-width" >
 				<form class="login100-form validate-form flex-sb flex-w" style="justify-content:space-around" action="{%url 'main:register'%}" method="post" >{% csrf_token %}
-                    <img src="{%static 'images/logo.png'%}" alt="" style="width: 150px;margin: auto;">
+                    <img src="{%static 'images/logo.png'%}" alt="" style="width: 150px;margin-left:auto; margin-right:auto;height:100px">
 					<span class="login100-form-title p-b-51">
 						Регистрация
                     </span>
