--- a/main/templates/vacancy_show.html
+++ b/main/templates/vacancy_show.html
@@ -53,7 +53,7 @@
                 </div>
 
                 {% if request.session.role == "student"%}
-                    {% if not vacancies|length > 0%}
+                    {% if vacancies|length > 0%}
                     <form class="form" action="{% url 'main:apply_vacancy' %}" method="post" >{% csrf_token %}
                         <div class="form-group">          
                             <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12 p-0">
