--- a/main/templates/student_cancel_request.html
+++ b/main/templates/student_cancel_request.html
@@ -2,3 +2,5 @@
 Привет {{ user.fullname }},
 К сожалению студент {{student.fullname}} отклонил приглашение на вашу вакансию {{vacancy.title}} 
 Порфтолио студента: https://{{domain}}/portfolio/{{student.id}}
+
+{% endautoescape %}
